@@ -3,6 +3,7 @@ Changes
 MANIFEST
 Makefile.PL
 t/all.t
+t/02-use-meta.t
 etc/euc.html
 etc/halloween.html
 etc/jis.html
