@@ -6,20 +6,28 @@ if ($mm_ver =~ /_/) { # dev version
     die $@ if $@;
 }
 
+my @REQUIRES = (
+    'Jcode'             => '2.06',
+    'HTML::TreeBuilder' => 0,
+    'constant'          => 0,
+    'vars'              => 0,
+    'strict'            => 0,
+    'warnings'          => 0,
+    'Exporter'          => 0,
+);
+
+my @TEST_REQUIRES = (
+    'Test::More'    => 0.88,
+);
+
+push(@REQUIRES, @TEST_REQUIRES) if $mm_ver < 6.64;
+
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 WriteMakefile(
     'NAME'	        => 'HTML::Summary',
     'VERSION_FROM'  => 'lib/HTML/Summary.pm', # finds $VERSION
-    'PREREQ_PM'     => {
-        'Jcode'             => '2.06',
-        'HTML::TreeBuilder' => 0,
-        'constant'          => 0,
-        'vars'              => 0,
-        'strict'            => 0,
-        'warnings'          => 0,
-        'Exporter'          => 0,
-    },
+    'PREREQ_PM'     => { @REQUIRES },
 
     ($mm_ver >= 6.48
         ? (MIN_PERL_VERSION => 5.006)
@@ -28,6 +36,11 @@ WriteMakefile(
 
     ($mm_ver >= 6.31
         ? (LICENSE => 'perl')
+        : ()
+    ),
+
+    ($mm_ver >= 6.64
+        ? (TEST_REQUIRES => { @TEST_REQUIRES })
         : ()
     ),
 
